tests/ui/typeck/missing-private-fields-in-struct-literal.stderr
error: cannot construct `S` with struct literal syntax due to private fields
  --> $DIR/missing-private-fields-in-struct-literal.rs:13:13
   |
LL |     let _ = m::S {
   |             ^^^^
LL |         visible: true,
LL |         a: (),
   |         ----- private field
LL |         b: (),
   |         ----- private field
   |
   = note: ...and other private fields `c`, `d` and `e` that were not provided

error: aborting due to 1 previous error

